[skip ci] Bug 1917008 - Emoji Reaction Button Off-Centered

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -1291,7 +1291,6 @@ a.comment-tag-url {
   min-width: 24px;
   height: 24px;
   font-size: 12px;
-  line-height: 0;
 }
 
 .comment-reactions button:disabled {
